# dioxus_fullstack_lib

./: Cargo.toml  Readme.md
crates/dioxus_pagination/: Cargo.toml
crates/dioxus_pagination/src/: lib.rs
crates/dioxus_tabler/: Cargo.toml
crates/dioxus_tabler/src/: component.rs  header.rs  layout.rs  lib.rs  navbar.rs
crates/dioxus_tabler/src/component/: alert.rs  button.rs  card.rs  input.rs  table.rs
crates/dioxus_tabler/src/component/button/: delete_button.rs
crates/dioxus_tabler/src/component/input/: checkbox.rs  input_field.rs  repeated_input.rs
crates/dioxus_tabler/src/component/table/: button_list.rs
crates/dioxus_tabler/src/layout/: centered_layout.rs  vertical_layout.rs
crates/dx_fullstack_lib/: Cargo.toml
crates/dx_fullstack_lib/src/: auth.rs  client_types.rs  file_response.rs  lib.rs  signal_container.rs
crates/dx_fullstack_lib_macro/: Cargo.toml
crates/dx_fullstack_lib_macro/src/: lib.rs  signal_container.rs
