[package]
name = "dioxus_pagination"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, optional = true }

[features]
server = [
    "dioxus/server",
    "dep:sea-orm",
]
web = [
    "dioxus/web",
]
