[package]
name = "dx_fullstack_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tokio = { workspace = true, features = ["full"], optional = true }
argon2 = { workspace = true, optional = true }

dx_fullstack_lib_macro = { workspace = true }
dioxus_pagination = { workspace = true }

[features]
default = []
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:argon2",
    "dioxus_pagination/server",
]
web = [
    "dioxus/web",
    "dioxus_pagination/web",
]